fixed monogram squish

--- a/css/style.css
+++ b/css/style.css
@@ -358,8 +358,9 @@ ________________LAPTOP______________________________________________________
   }
 
   .image3 {
-    width: 7%;
-    margin: 0px;
+    width: 87px;
+    height: 70px;
+    margin: 5px;
   }
 
   /*
